# AtlasTest

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: index.py
config/: daily_flight_deck.yaml
prompts/: se_daily_flight_deck_prompt.md  snapshot_fetch_prompt.md  snapshot_schema.json
scripts/: run_dashboard.sh  run_snapshot_job.sh  smoke_test_dashboard.sh
skills/command-center-integration-audit/: SKILL.md
skills/command-center-integration-audit/references/: remediation-checklist.md
skills/command-center-integration-audit/scripts/: audit_snapshot.py
skills/command-center-task-ops/: SKILL.md
skills/command-center-task-ops/references/: execution-template.md
skills/command-center-task-ops/scripts/: task_ops.py
skills/se-daily-flight-deck/: SKILL.md
src/daily_flight_deck/: __init__.py  action_engine.py  brief.py  cli.py  config.py  dashboard_app.py  dashboard_routes.py  dashboard_services.py  delivery.py  models.py  normalizers.py  scoring.py  skill_runner.py  snapshot_producer.py  storage.py
src/daily_flight_deck/scheduler_templates/: com.rory.daily-flight-deck.plist
static/css/: dashboard.css
static/js/: dashboard.js
templates/: index.html
templates/partials/: board.html  panels.html  runs.html  top_strip.html
tests/: test_daily_flight_deck.py  test_dashboard_api.py  test_snapshot_producer.py  test_storage.py
tests/fixtures/: calendar.json  full_snapshot_payload.json  gmail.json  slack.json
